# tso-validation-results

./: .gitattributes  .gitignore  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  CLEANUP_AUDIT_REPORT.md  CONTRIBUTING.md  ENGINE_INTEGRATION_SPEC.md  JUSTFILE.md  LEAN_AUDIT.md  PX_SYSTEM_TEST_REPORT.json  README.md  STATUS.md  flake.nix  justfile  px  pyproject.toml  pyrightconfig.json  requirements-lock.txt  ruff.toml  run_e2e_layers.py
01_Executive/: CSA_Pentarchy.py  __init__.py
02_Audit/: __init__.py
Nipah_Analysis/: README.md
PX_Audit/: AAS_Verification.py  Audit_Chain_20260123_204344.jsonl  Audit_Chain_20260123_205006.jsonl  Audit_Chain_20260123_210639.jsonl  Audit_Chain_20260123_211451.jsonl  Audit_Chain_20260123_212326.jsonl  Audit_Chain_20260123_212939.jsonl  Autonomous_Research_Cycle.py  Batch_Expansion_Protocol.py  Continuous_Monitor.py  Curvature_Mapper.py  Dashboard_Plotter.py  Drift_Monitor.py  Final_Mural_State.json  Final_Mural_Update.py  Final_System_Seal.py  Full_Research_Cycle.py  Generate_Manifest.py  Global_Smoke_Test.py  Lead_Optimization_Protocol.py  Manifold_Explorer.py  Manifold_Health.py  Manifold_Health_Summary.py  Mural_Network.py  PX_Mural.py  Promote_Golden_Dossier.py  Protocol_Zero.py  Recovery_Scrubber_Final.py  Refinement_Engine.py  SYSTEM_SEAL.json  Stage_Correlation.py  health_monitor_log.jsonl  health_monitor_state.json  sovereign_log_chain.jsonl  system_manifest.json  system_state.json
PX_Constitution/: Block_Universe.py  Constitutional_Tests.py  DATA_ENGINE_SPONSOR_FILING_DIRECTIVE.md  DOSSIER_COMMERCIALASSETS_FILING_RULES.md  (+15 more)
(+23710 files in other folders)
