[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predator-x"
version = "1.0.0"
description = "Predator X — Deterministic pharmaceutical compound discovery platform"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "Proprietary"}
authors = [{name = "Predator X"}]
dependencies = [
    "rdkit>=2023.9.1",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["ruff", "pyright", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["PX_*", "governance", "scripts", "TSO_Validator", "Nipah_Analysis"]
